--- a/MayoChat/app/build.gradle
+++ b/MayoChat/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    //implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-inappmessaging:19.0.5'
     implementation 'com.google.firebase:firebase-inappmessaging-display:19.0.5'
